--- a/Z-Queen/build.gradle
+++ b/Z-Queen/build.gradle
@@ -1,5 +1,10 @@
-
 description = 'Z-Queen'
+
 dependencies {
-    compile group: 'com.lmax', name: 'disruptor', version:'3.4.2'
+    compile group: 'com.lmax', name: 'disruptor', version: '3.4.2'
+}
+sourceSets {
+    main {
+        java.srcDirs = ['src/main/java', 'src/main/ntru']
+    }
 }
