--- a/Z-Rook/pom.xml
+++ b/Z-Rook/pom.xml
@@ -37,8 +37,12 @@
     <dependencies>
         <dependency>
             <groupId>com.tgx.service</groupId>
-            <artifactId>manange.z-bishop</artifactId>
+            <artifactId>io.z-queen</artifactId>
             <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
     </dependencies>
 </project>
