--- a/Z-Pawn/pom.xml
+++ b/Z-Pawn/pom.xml
@@ -13,10 +13,6 @@
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         <dependency>
@@ -36,6 +32,11 @@
         <dependency>
             <groupId>org.thymeleaf.extras</groupId>
             <artifactId>thymeleaf-extras-springsecurity4</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.tgx.service</groupId>
+            <artifactId>manange.z-bishop</artifactId>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>com.tgx.service</groupId>
