--- a/pom.xml
+++ b/pom.xml
@@ -15,24 +15,30 @@
         <module>Z-Pawn</module>
     </modules>
     <properties>
+        <!--RT-->
         <java.version>1.8</java.version>
         <java.encoding>UTF-8</java.encoding>
         <project.build.sourceEncoding>${java.encoding}</project.build.sourceEncoding>
+        <!--LOG-->
         <slf4j.version>1.7.25</slf4j.version>
         <logback.version>1.2.3</logback.version>
-        <junit.platform.version>1.2.0</junit.platform.version>
-        <junit.vintage.version>5.2.0</junit.vintage.version>
-        <junit.jupiter.version>5.2.0</junit.jupiter.version>
-        <mockito.version>2.18.3</mockito.version>
+        <!--SPRING-BOOT-->
         <spring.version>5.0.8.RELEASE</spring.version>
         <spring-security.version>5.0.7.RELEASE</spring-security.version>
         <spring-boot.version>2.0.4.RELEASE</spring-boot.version>
         <thymeleaf.extras.version>3.0.2.RELEASE</thymeleaf.extras.version>
-        <postgresql.driver.version>42.2.2</postgresql.driver.version>
-        <jackson.version>2.9.5</jackson.version>
-        <httpcore.version>4.4.9</httpcore.version>
-        <disruptor.version>3.4.2</disruptor.version>
+        <!--DB-->
+        <postgresql.driver.version>42.2.5</postgresql.driver.version>
         <bdb.je.version>7.5.11</bdb.je.version>
+        <!--PIPELINE-->
+        <disruptor.version>3.4.2</disruptor.version>
+        <!--TOOLS-->
+        <httpcore.version>4.4.9</httpcore.version>
+        <!--TEST TOOLS VERSION-->
+        <junit.platform.version>1.2.0</junit.platform.version>
+        <junit.vintage.version>5.2.0</junit.vintage.version>
+        <junit.jupiter.version>5.2.0</junit.jupiter.version>
+        <mockito.version>2.18.3</mockito.version>
     </properties>
     <dependencies>
         <!--Log-->
@@ -154,11 +160,6 @@
                 <groupId>org.postgresql</groupId>
                 <artifactId>postgresql</artifactId>
                 <version>${postgresql.driver.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.fasterxml.jackson.core</groupId>
-                <artifactId>jackson-annotations</artifactId>
-                <version>${jackson.version}</version>
             </dependency>
             <!-- 测试用依赖 -->
             <dependency>
