--- a/Z-Pawn/build.gradle
+++ b/Z-Pawn/build.gradle
@@ -1,14 +1,12 @@
+
 description = 'Z-Pawn'
 dependencies {
-    compile group: 'org.springframework.boot', name: 'spring-boot-starter', version: '2.0.4.RELEASE'
-    compile(group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '2.0.4.RELEASE') {
-        exclude(module: 'spring-boot-starter-tomcat')
+    compile(group: 'org.springframework.boot', name: 'spring-boot-starter-web', version:'2.0.4.RELEASE') {
+exclude(module: 'spring-boot-starter-tomcat')
     }
-    compile group: 'org.springframework.boot', name: 'spring-boot-starter-undertow', version: '2.0.4.RELEASE'
-    compile group: 'org.springframework.boot', name: 'spring-boot-starter-thymeleaf', version: '2.0.4.RELEASE'
-    compile group: 'org.thymeleaf.extras', name: 'thymeleaf-extras-springsecurity4', version: '3.0.2.RELEASE'
-    compile project(':endpoint.z-rook')
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-undertow', version:'2.0.4.RELEASE'
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-thymeleaf', version:'2.0.4.RELEASE'
+    compile group: 'org.thymeleaf.extras', name: 'thymeleaf-extras-springsecurity4', version:'3.0.2.RELEASE'
+  compile project(':manange.z-bishop')
+  compile project(':endpoint.z-rook')
 }
-
-apply plugin: 'application'
-mainClassName='com.tgx.chess.pawn.Application'
