--- a/Z-Bishop/build.gradle
+++ b/Z-Bishop/build.gradle
@@ -1,10 +1,11 @@
 
 description = 'Z-Bishop'
 dependencies {
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version:'2.0.4.RELEASE'
     compile(group: 'org.springframework.boot', name: 'spring-boot-starter-web', version:'2.0.4.RELEASE') {
 exclude(module: 'spring-boot-starter-tomcat')
     }
-    compile group: 'org.postgresql', name: 'postgresql', version:'42.2.2'
+    compile group: 'org.postgresql', name: 'postgresql', version:'42.2.5'
     compile group: 'com.oracle', name: 'je', version:'7.5.11'
   compile project(':io.z-queen')
 }
