增加测试，修正日志输出 修复TimeWheel bug 更新设计文档，

--- a/Z-Bishop/src/main/resources/db.properties
+++ b/Z-Bishop/src/main/resources/db.properties
@@ -24,7 +24,7 @@
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 spring.jpa.database=POSTGRESQL
 spring.datasource.platform=postgres
-spring.datasource.url=jdbc:postgresql://localhost/tgx.chess
+spring.datasource.url=jdbc:postgresql://test.cainiao-inc.com/tgx.chess
 spring.datasource.username=william.d.zk
 spring.datasource.password=
 spring.datasource.driver-class-name=org.postgresql.Driver
