--- a/Z-Pawn/src/main/resources/application.properties
+++ b/Z-Pawn/src/main/resources/application.properties
@@ -22,3 +22,11 @@
 # SOFTWARE.
 #
 server.port=8080
+spring.thymeleaf.cache=false
+spring.thymeleaf.enabled=true
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.check-template-location=true
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.servlet.content-type=text/html
+spring.thymeleaf.mode=HTML
