--- a/pom.xml
+++ b/pom.xml
@@ -233,6 +233,10 @@
                 <configuration>
                     <source>8</source>
                     <target>8</target>
+                    <includes>
+                        <include>src/main/ntru/**/*.java</include>
+                        <include>src/main/java/**/*.java</include>
+                    </includes>
                 </configuration>
             </plugin>
             <!-- Spring Boot Maven 插件 -->
