更新数据库配置

--- a/Z-Bishop/src/main/resources/db.properties
+++ b/Z-Bishop/src/main/resources/db.properties
@@ -24,8 +24,8 @@
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 spring.jpa.database=POSTGRESQL
 spring.datasource.platform=postgres
-spring.datasource.url=jdbc:postgresql://test.cainiao-inc.com/tgx.chess
-spring.datasource.username=william.d.zk
+spring.datasource.url=jdbc:postgresql://localhost/tgx.z-chess
+spring.datasource.username=tgx.z-chess.pgsql
 spring.datasource.password=
 spring.datasource.driver-class-name=org.postgresql.Driver
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
