更新数据库配置

--- a/Z-Bishop/src/main/resources/db.properties
+++ b/Z-Bishop/src/main/resources/db.properties
@@ -26,7 +26,7 @@ spring.jpa.database=POSTGRESQL
 spring.datasource.platform=postgres
 spring.datasource.url=jdbc:postgresql://localhost/tgx.z-chess
 spring.datasource.username=tgx.z-chess.pgsql
-spring.datasource.password=
+spring.datasource.password=2da790253022bd05cddda6d06bdc1e60
 spring.datasource.driver-class-name=org.postgresql.Driver
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
