Error 处理机制错误，已修复

--- a/Z-Bishop/pom.xml
+++ b/Z-Bishop/pom.xml
@@ -24,7 +24,7 @@
             <artifactId>postgresql</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.oracle</groupId>
+            <groupId>com.sleepycat</groupId>
             <artifactId>je</artifactId>
         </dependency>
         <dependency>
