--- a/pom.xml
+++ b/pom.xml
@@ -219,7 +219,7 @@
             </dependency>
             <!--local repository-->
             <dependency>
-                <groupId>com.oracle</groupId>
+                <groupId>com.sleepycat</groupId>
                 <artifactId>je</artifactId>
                 <version>${bdb.je.version}</version>
             </dependency>
