--- a/Z-Bishop/src/main/resources/db.properties
+++ b/Z-Bishop/src/main/resources/db.properties
@@ -24,7 +24,7 @@
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 spring.jpa.database=POSTGRESQL
 spring.datasource.platform=postgres
-spring.datasource.url=jdbc:postgresql://test.cainiao-inc.com/tgx.z-chess
+spring.datasource.url=jdbc:postgresql://localhost/tgx.z-chess
 spring.datasource.username=tgx.z-chess.pgsql
 spring.datasource.password=2da790253022bd05cddda6d06bdc1e60
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -41,7 +41,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.hbm2ddl.auto=update
 spring.jpa.properties.hibernate.default_schema="tgx-chess"
 spring.jpa.properties.hibernate.format_sql=true
-
-spring.queries.users-query=select email, password, active from user where email=?
+spring.queries.users-query=select email, password, active from "tgx-chess".user where email=?
 spring.queries.roles-query=select u.email, r.role from user u inner join user_role ur on(u.user_id=ur.user_id) inner join role r on(ur.role_id=r.role_id) where u.email=?
 
