--- a/Z-Bishop/src/main/resources/db.properties
+++ b/Z-Bishop/src/main/resources/db.properties
@@ -39,8 +39,8 @@ spring.jpa.generate-ddl=true
 # create-drop/create will lead to errors if Hibernate tries to create the same tables
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.hbm2ddl.auto=update
-spring.jpa.properties.hibernate.default_schema="tgx-chess"
+spring.jpa.properties.hibernate.default_schema="tgx-z-chess"
 spring.jpa.properties.hibernate.format_sql=true
 spring.queries.users-query=select email, password, active from "tgx-chess".user where email=?
-spring.queries.roles-query=select u.email, r.role from user u inner join user_role ur on(u.user_id=ur.user_id) inner join role r on(ur.role_id=r.role_id) where u.email=?
+spring.queries.roles-query=select u.email, r.role from "tgx-chess".user u inner join "tgx-chess".user_role ur on(u.user_id=ur.user_id) inner join "tgx-chess".role r on(ur.role_id=r.role_id) where u.email=?
 
