update deploy setting

--- a/Z-Bishop/pom.xml
+++ b/Z-Bishop/pom.xml
@@ -12,12 +12,9 @@
     <name>Z-Bishop</name>
     <dependencies>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-jpa</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
+            <groupId>com.tgx.service</groupId>
+            <artifactId>spring.z-knight</artifactId>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>org.postgresql</groupId>
