修改项目依赖

--- a/Z-Rook/pom.xml
+++ b/Z-Rook/pom.xml
@@ -20,5 +20,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.google.maps</groupId>
+            <artifactId>google-maps-services</artifactId>
+            <version>0.2.11</version>
+        </dependency>
     </dependencies>
 </project>
