--- a/Z-King/pom.xml
+++ b/Z-King/pom.xml
@@ -10,5 +10,10 @@
     </parent>
     <artifactId>core.z-king</artifactId>
     <name>Z-King</name>
-
+    <dependencies>
+        <dependency>
+            <groupId>com.lmax</groupId>
+            <artifactId>disruptor</artifactId>
+        </dependency>
+    </dependencies>
 </project>
