--- a/Z-Knight/src/main/resources/validation.properties
+++ b/Z-Knight/src/main/resources/validation.properties
@@ -22,6 +22,7 @@
 # SOFTWARE.
 #
 field.not.empty=This field is required.
+size.email.over_length=email address is over length more than 64 characters
 size.account.form.name=Please use between 6 and 32 characters.
 duplicate.account.form.name=Someone already has that username.
 duplicate.account.form.email=Someone already has that email.
