update gradle config

--- a/Z-King/build.gradle
+++ b/Z-King/build.gradle
@@ -1,4 +1,7 @@
 description = 'Z-King'
+dependencies {
+    compile group: 'com.lmax', name: 'disruptor', version: '3.4.2'
+}
 sourceSets {
     main {
         java.srcDirs = ['src/main/java', 'src/main/ntru']
