--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ subprojects {
     repositories {
         mavenLocal()
         mavenCentral()
+        maven { url "http://maven.aliyun.com/nexus/content/groups/public" }
     }
 
     dependencies {
