--- a/Z-Pawn/src/main/resources/application.properties
+++ b/Z-Pawn/src/main/resources/application.properties
@@ -25,10 +25,10 @@ server.port=8080
 spring.thymeleaf.cache=false
 spring.resources.cache.period=0s
 spring.thymeleaf.enabled=true
-spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.prefix=classpath:/web/
 spring.thymeleaf.check-template-location=true
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.encoding=UTF-8
 spring.thymeleaf.servlet.content-type=text/html
 spring.thymeleaf.mode=HTML
-spring.resources.static-locations=classpath:/static/
+spring.resources.static-locations=classpath:/web/assets
