--- a/Z-Knight/pom.xml
+++ b/Z-Knight/pom.xml
@@ -16,7 +16,7 @@
             <artifactId>manange.z-bishop</artifactId>
             <version>${project.version}</version>
         </dependency>
-        <!--webjars-->
+        <!--webjars
         <dependency>
             <groupId>org.webjars</groupId>
             <artifactId>bootstrap</artifactId>
@@ -38,6 +38,7 @@
             <artifactId>webjars-locator</artifactId>
             <version>0.34</version>
         </dependency>
+        -->
         <!--spring boot-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -53,20 +54,18 @@
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-security</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-thymeleaf</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
+        <!--
         <dependency>
-            <groupId>org.thymeleaf.extras</groupId>
-            <artifactId>thymeleaf-extras-springsecurity4</artifactId>
+              <groupId>org.springframework.boot</groupId>
+              <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
+        <dependency>
+              <groupId>org.thymeleaf.extras</groupId>
+              <artifactId>thymeleaf-extras-springsecurity4</artifactId>
+        </dependency>
+        -->
         <dependency>
             <groupId>net.bytebuddy</groupId>
             <artifactId>byte-buddy</artifactId>
