--- a/Z-Knight/src/main/resources/validation.properties
+++ b/Z-Knight/src/main/resources/validation.properties
@@ -27,4 +27,4 @@ size.account.form.name=Please use between 6 and 32 characters.
 duplicate.account.form.name=Someone already has that username.
 duplicate.account.form.email=Someone already has that email.
 size.account.form.password=Try one with at least 8 characters.
-email.valid=Please provide a valid Email
+valid.email=Please provide a valid Email
