--- a/Z-Knight/src/main/resources/db.properties
+++ b/Z-Knight/src/main/resources/db.properties
@@ -30,7 +30,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 # Initialize database schema -> execute schema.sql (always, embedded, never)
 spring.datasource.initialization-mode=always
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.generate-ddl=true
 # Hibernate ddl auto (create, create-drop, validate, update)
 # create-drop/create will lead to errors if Hibernate tries to create the same tables
