所有 z-chess 专有协议，业务代码转移到bishop中，queen module 纯化

--- a/Z-Rook/pom.xml
+++ b/Z-Rook/pom.xml
@@ -36,13 +36,13 @@
     <name>Z-Rook</name>
     <dependencies>
         <dependency>
-            <groupId>com.tgx.service</groupId>
-            <artifactId>io.z-queen</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.tgx.service</groupId>
+            <artifactId>manange.z-bishop</artifactId>
+            <version>${project.version}</version>
         </dependency>
     </dependencies>
 </project>
