--- a/Z-Rook/build.gradle
+++ b/Z-Rook/build.gradle
@@ -24,7 +24,7 @@
 
 description = 'Z-Rook'
 dependencies {
-    compile project(':io.z-queen')
+    compile project(':manange.z-bishop')
     compile(group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '2.1.1.RELEASE') {
         exclude(module: 'spring-boot-starter-tomcat')
     }
