--- a/Z-Knight/src/main/resources/device.properties
+++ b/Z-Knight/src/main/resources/device.properties
@@ -21,5 +21,7 @@
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE 
 # SOFTWARE.                                                                     
 #
-device.server.host=0.0.0.0
-device.server.port=5226
+ws.server.host=0.0.0.0
+ws.server.port=5226
+qtt.server.host=0.0.0.0
+qtt.server.port=1883
