QttControl 需要加入进去，用于管理MQTT 协议栈中14中控制指令。

--- a/Z-Rook/src/main/resources/qtt.client.properties
+++ b/Z-Rook/src/main/resources/qtt.client.properties
@@ -21,6 +21,6 @@
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 # SOFTWARE.
 #
-client.target.name=localhost
-client.target.host=127.0.0.1
-client.target.port=1883
+qtt.client.target.name=localhost
+qtt.client.target.host=127.0.0.1
+qtt.client.target.port=1883
