--- a/Z-Rook/src/main/resources/ws.client.properties
+++ b/Z-Rook/src/main/resources/ws.client.properties
@@ -21,6 +21,6 @@
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 # SOFTWARE.
 #
-client.target.name=localhost
-client.target.host=127.0.0.1
-client.target.port=5226
+ws.client.target.name=localhost
+ws.client.target.host=127.0.0.1
+ws.client.target.port=5226
