MQTT Test client success

--- a/Z-Knight/src/main/resources/db.properties
+++ b/Z-Knight/src/main/resources/db.properties
@@ -31,6 +31,7 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.datasource.initialization-mode=always
 spring.jpa.show-sql=false
 spring.jpa.generate-ddl=true
+spring.jpa.open-in-view=true
 # Hibernate ddl auto (create, create-drop, validate, update)
 # create-drop/create will lead to errors if Hibernate tries to create the same tables
 spring.jpa.hibernate.ddl-auto=update
