--- a/Z-Rook/pom.xml
+++ b/Z-Rook/pom.xml
@@ -41,7 +41,7 @@
         </dependency>
         <dependency>
             <groupId>com.tgx.service</groupId>
-            <artifactId>manange.z-bishop</artifactId>
+            <artifactId>manage.z-bishop</artifactId>
             <version>${project.version}</version>
         </dependency>
     </dependencies>
