--- a/Z-Bishop/pom.xml
+++ b/Z-Bishop/pom.xml
@@ -32,7 +32,7 @@
         <groupId>com.tgx.service</groupId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
-    <artifactId>manange.z-bishop</artifactId>
+    <artifactId>manage.z-bishop</artifactId>
     <name>Z-Bishop</name>
     <dependencies>
         <dependency>
