--- a/Z-Rook/src/main/resources/qtt.consumer.properties
+++ b/Z-Rook/src/main/resources/qtt.consumer.properties
@@ -21,6 +21,6 @@
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 # SOFTWARE.
 #
-ws.client.target.name=localhost
-ws.client.target.host=127.0.0.1
-ws.client.target.port=5226
+qtt.consumer.target.name=localhost
+qtt.consumer.target.host=127.0.0.1
+qtt.consumer.target.port=1883
