--- a/Z-Rook/src/main/resources/ws.consumer.properties
+++ b/Z-Rook/src/main/resources/ws.consumer.properties
@@ -21,6 +21,6 @@
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 # SOFTWARE.
 #
-qtt.client.target.name=localhost
-qtt.client.target.host=127.0.0.1
-qtt.client.target.port=1883
+ws.consumer.target.name=localhost
+ws.consumer.target.host=127.0.0.1
+ws.consumer.target.port=5226
