--- a/pom.xml
+++ b/pom.xml
@@ -258,8 +258,8 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>8</source>
-                    <target>8</target>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
                     <includes>
                         <include>src/main/ntru/**/*.java</include>
                         <include>src/main/java/**/*.java</include>
