--- a/Z-Knight/build.gradle
+++ b/Z-Knight/build.gradle
@@ -32,5 +32,6 @@ dependencies {
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '2.1.6.RELEASE'
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-actuator', version: '2.1.6.RELEASE'
     compile group: 'org.postgresql', name: 'postgresql', version: '42.2.6'
+    compile group: 'com.vladmihalcea', name: 'hibernate-types-52', version: '2.5.0'
     compile group: 'com.sleepycat', name: 'je', version: '7.5.11'
 }
