--- a/pom.xml
+++ b/pom.xml
@@ -20,20 +20,22 @@
         <!--RT-->
         <java.version>1.8</java.version>
         <java.encoding>UTF-8</java.encoding>
+        <maven.compiler.source>${java.version}</maven.compiler.source>
+        <maven.compiler.target>${java.version}</maven.compiler.target>
         <project.build.sourceEncoding>${java.encoding}</project.build.sourceEncoding>
         <!--LOG-->
-        <slf4j.version>1.7.26</slf4j.version>
+        <slf4j.version>1.7.28</slf4j.version>
         <logback.version>1.2.3</logback.version>
         <!--SPRING-BOOT-->
-        <spring-boot.version>2.1.6.RELEASE</spring-boot.version>
+        <spring-boot.version>2.1.8.RELEASE</spring-boot.version>
         <!--DB-->
-        <postgresql.driver.version>42.2.6</postgresql.driver.version>
+        <postgresql.driver.version>42.2.7</postgresql.driver.version>
         <bdb.je.version>7.5.11</bdb.je.version>
-        <hibernate-types.version>2.5.0</hibernate-types.version>
+        <hibernate-types.version>2.6.1</hibernate-types.version>
         <!--PIPELINE-->
         <disruptor.version>3.4.2</disruptor.version>
         <!--TOOLS-->
-        <httpcore.version>4.4.11</httpcore.version>
+        <httpcore.version>4.4.12</httpcore.version>
         <!--TEST TOOLS VERSION-->
         <junit.platform.version>1.5.0</junit.platform.version>
         <junit.vintage.version>5.5.0</junit.vintage.version>
