--- a/pom.xml
+++ b/pom.xml
@@ -169,6 +169,12 @@
                 <artifactId>hibernate-types-52</artifactId>
                 <version>${hibernate-types.version}</version>
             </dependency>
+            <!--local repository-->
+            <dependency>
+                <groupId>com.sleepycat</groupId>
+                <artifactId>je</artifactId>
+                <version>${bdb.je.version}</version>
+            </dependency>
             <!-- 测试用依赖 -->
             <dependency>
                 <groupId>org.junit.platform</groupId>
@@ -219,17 +225,10 @@
                 <artifactId>httpcore-nio</artifactId>
                 <version>${httpcore.version}</version>
             </dependency>
-            <!-- https://mvnrepository.com/artifact/com.lmax/disruptor -->
             <dependency>
                 <groupId>com.lmax</groupId>
                 <artifactId>disruptor</artifactId>
                 <version>${disruptor.version}</version>
-            </dependency>
-            <!--local repository-->
-            <dependency>
-                <groupId>com.sleepycat</groupId>
-                <artifactId>je</artifactId>
-                <version>${bdb.je.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
@@ -248,9 +247,11 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
                 <configuration>
                     <source>${java.version}</source>
                     <target>${java.version}</target>
+                    <encoding>${java.encoding}</encoding>
                     <includes>
                         <include>src/main/ntru/**/*.java</include>
                         <include>src/main/java/**/*.java</include>
@@ -267,7 +268,7 @@
             <plugin>
                 <groupId>org.hibernate.orm.tooling</groupId>
                 <artifactId>hibernate-enhance-maven-plugin</artifactId>
-                <version>5.4.3.Final</version>
+                <version>5.4.4.Final</version>
                 <executions>
                     <execution>
                         <configuration>
