--- a/Z-Auth/pom.xml
+++ b/Z-Auth/pom.xml
@@ -34,5 +34,11 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>biz.z-auth</artifactId>
     <name>Z-Auth</name>
-
+    <dependencies>
+        <dependency>
+            <groupId>com.tgx.service</groupId>
+            <artifactId>spring.z-knight</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+    </dependencies>
 </project>
