--- a/Z-Rook/build.gradle
+++ b/Z-Rook/build.gradle
@@ -1,6 +1,6 @@
 description = 'Z-Rook'
 dependencies {
-    compile project(':io.z-queen')
+    compile project(':manage.z-bishop')
     compile(group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '2.1.8.RELEASE') {
         exclude(module: 'spring-boot-starter-tomcat')
     }
