--- a/Z-Player/pom.xml
+++ b/Z-Player/pom.xml
@@ -32,8 +32,8 @@
         <version>1.0.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>biz.z-admin</artifactId>
-    <name>Z-Admin</name>
+    <artifactId>biz.z-player</artifactId>
+    <name>Z-Player</name>
     <dependencies>
         <dependency>
             <groupId>com.tgx.service</groupId>
