--- a/Z-Pawn/src/main/resources/server.properties
+++ b/Z-Pawn/src/main/resources/server.properties
@@ -32,16 +32,16 @@ z.chess.server.biz_io_count=3
 #core cluster io pipeline count
 z.chess.server.cluster_io_count=1
 #core total aio queue pipeline ring buffer size's (2 power)
-z.chess.server.aioQueuePower=10
+z.chess.server.aio_queue_power=10
 #core cluster queue pipeline ring buffer size's (2 power)
-z.chess.server.clusterPower=8
+z.chess.server.cluster_power=8
 #core biz queue pipeline ring buffer size's (2 power)
-z.chess.server.localPower=9
+z.chess.server.local_power=9
 #core biz link's event queue pipeline ring buffer size's (2 power)
-z.chess.server.linkPower=9
+z.chess.server.link_power=9
 #core biz logic queue pipeline ring buffer size's (2 power)
-z.chess.server.logicPower=9
+z.chess.server.logic_power=9
 #core error queue pipeline ring buffer size's (2 power)
-z.chess.server.errorPower=6
+z.chess.server.error_power=6
 #core closer for biz/cluster queue pipeline ring buffer size's (2 power)
-z.chess.server.closerPower=7
+z.chess.server.closer_power=7
