--- a/Z-Queen/src/main/resources/io.properties
+++ b/Z-Queen/src/main/resources/io.properties
@@ -25,3 +25,11 @@ z.chess.io.size_powers.client=3
 z.chess.io.size_powers.cluster=7
 z.chess.io.size_powers.local=3
 z.chess.io.size_powers.server=12
+z.chess.io.server.keep_alive=true
+z.chess.io.server.write_time_out_in_second=29S
+z.chess.io.server.read_time_out_in_minute=14M
+z.chess.io.server.so_linger_in_second=23S
+z.chess.io.server.send_buffer_size=128KB
+z.chess.io.server.recv_buffer_size=64KB
+z.chess.io.server.send_queue_max=64
+z.chess.io.server.tcp_no_delay=true
