--- a/Z-Queen/src/main/resources/io.properties
+++ b/Z-Queen/src/main/resources/io.properties
@@ -26,10 +26,34 @@ z.chess.io.size_powers.cluster=7
 z.chess.io.size_powers.local=3
 z.chess.io.size_powers.server=12
 z.chess.io.server.keep_alive=true
-z.chess.io.server.write_time_out_in_second=29S
-z.chess.io.server.read_time_out_in_minute=14M
-z.chess.io.server.so_linger_in_second=23S
+z.chess.io.server.write_time_out_in_second=30S
+z.chess.io.server.read_time_out_in_minute=15M
+z.chess.io.server.so_linger_in_second=0S
 z.chess.io.server.send_buffer_size=128KB
 z.chess.io.server.recv_buffer_size=64KB
 z.chess.io.server.send_queue_max=64
 z.chess.io.server.tcp_no_delay=true
+z.chess.io.client.keep_alive=true
+z.chess.io.client.write_time_out_in_second=29S
+z.chess.io.client.read_time_out_in_minute=14M
+z.chess.io.client.so_linger_in_second=23S
+z.chess.io.client.send_buffer_size=128KB
+z.chess.io.client.recv_buffer_size=64KB
+z.chess.io.client.send_queue_max=64
+z.chess.io.client.tcp_no_delay=true
+z.chess.io.local.keep_alive=true
+z.chess.io.local.write_time_out_in_second=29S
+z.chess.io.local.read_time_out_in_minute=14M
+z.chess.io.local.so_linger_in_second=23S
+z.chess.io.local.send_buffer_size=128KB
+z.chess.io.local.recv_buffer_size=64KB
+z.chess.io.local.send_queue_max=64
+z.chess.io.local.tcp_no_delay=true
+z.chess.io.cluster.keep_alive=true
+z.chess.io.cluster.write_time_out_in_second=29S
+z.chess.io.cluster.read_time_out_in_minute=14M
+z.chess.io.cluster.so_linger_in_second=23S
+z.chess.io.cluster.send_buffer_size=128KB
+z.chess.io.cluster.recv_buffer_size=64KB
+z.chess.io.cluster.send_queue_max=64
+z.chess.io.cluster.tcp_no_delay=true
