--- a/Z-Queen/src/main/resources/io.properties
+++ b/Z-Queen/src/main/resources/io.properties
@@ -33,27 +33,27 @@ z.chess.io.server.send_buffer_size=128KB
 z.chess.io.server.recv_buffer_size=64KB
 z.chess.io.server.send_queue_max=64
 z.chess.io.server.tcp_no_delay=true
-z.chess.io.client.keep_alive=true
-z.chess.io.client.write_time_out_in_second=29S
-z.chess.io.client.read_time_out_in_minute=14M
-z.chess.io.client.so_linger_in_second=23S
-z.chess.io.client.send_buffer_size=128KB
-z.chess.io.client.recv_buffer_size=64KB
-z.chess.io.client.send_queue_max=64
+z.chess.io.client.keep_alive=false
+z.chess.io.client.write_time_out_in_second=15S
+z.chess.io.client.read_time_out_in_minute=5M
+z.chess.io.client.so_linger_in_second=10S
+z.chess.io.client.send_buffer_size=8KB
+z.chess.io.client.recv_buffer_size=4KB
+z.chess.io.client.send_queue_max=8
 z.chess.io.client.tcp_no_delay=true
 z.chess.io.local.keep_alive=true
-z.chess.io.local.write_time_out_in_second=29S
-z.chess.io.local.read_time_out_in_minute=14M
-z.chess.io.local.so_linger_in_second=23S
+z.chess.io.local.write_time_out_in_second=5S
+z.chess.io.local.read_time_out_in_minute=1M
+z.chess.io.local.so_linger_in_second=30S
 z.chess.io.local.send_buffer_size=128KB
-z.chess.io.local.recv_buffer_size=64KB
-z.chess.io.local.send_queue_max=64
+z.chess.io.local.recv_buffer_size=128KB
+z.chess.io.local.send_queue_max=32
 z.chess.io.local.tcp_no_delay=true
 z.chess.io.cluster.keep_alive=true
-z.chess.io.cluster.write_time_out_in_second=29S
-z.chess.io.cluster.read_time_out_in_minute=14M
-z.chess.io.cluster.so_linger_in_second=23S
+z.chess.io.cluster.write_time_out_in_second=10S
+z.chess.io.cluster.read_time_out_in_minute=1M
+z.chess.io.cluster.so_linger_in_second=30S
 z.chess.io.cluster.send_buffer_size=128KB
-z.chess.io.cluster.recv_buffer_size=64KB
-z.chess.io.cluster.send_queue_max=64
+z.chess.io.cluster.recv_buffer_size=128KB
+z.chess.io.cluster.send_queue_max=16
 z.chess.io.cluster.tcp_no_delay=true
