--- a/Z-Queen/src/main/resources/io.properties
+++ b/Z-Queen/src/main/resources/io.properties
@@ -21,10 +21,10 @@
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE 
 # SOFTWARE.                                                                     
 #
-z.chess.io.size_powers.client=3
-z.chess.io.size_powers.cluster=7
-z.chess.io.size_powers.local=3
-z.chess.io.size_powers.server=12
+z.chess.io.size_powers.client.0=3
+z.chess.io.size_powers.local.1=3
+z.chess.io.size_powers.server.2=12
+z.chess.io.size_powers.cluster.3=7
 z.chess.io.server.keep_alive=true
 z.chess.io.server.write_time_out_in_second=30S
 z.chess.io.server.read_time_out_in_minute=15M
