--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,8 @@
         <logback.version>1.2.3</logback.version>
         <!--SPRING-BOOT-->
         <spring-boot.version>2.2.4.RELEASE</spring-boot.version>
+        <!--Commons-IO-->
+        <commons-io.version>2.6</commons-io.version>
         <!--DB-->
         <postgresql.driver.version>42.2.7</postgresql.driver.version>
         <hibernate-types.version>2.6.1</hibernate-types.version>
@@ -110,6 +112,11 @@
                 <groupId>ch.qos.logback</groupId>
                 <artifactId>logback-core</artifactId>
                 <version>${logback.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>commons-io</groupId>
+                <artifactId>commons-io</artifactId>
+                <version>${commons-io.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework.boot</groupId>
