--- a/Z-Knight/src/main/resources/device.config.properties
+++ b/Z-Knight/src/main/resources/device.config.properties
@@ -21,5 +21,8 @@
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 # SOFTWARE.
 #
-invalid.days=41
-random.seed=z-chess.knight
+z.chess.device.password_invalid_days=41D
+z.chess.device.password_random_seed=z-chess.knight
+z.chess.device.address_ws=0.0.0.0:5226
+z.chess.device.address_qtt=0.0.0.0:1883
+
