Multi session client update

--- a/Z-Rook/src/main/resources/consumer.properties
+++ b/Z-Rook/src/main/resources/consumer.properties
@@ -21,6 +21,9 @@
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 # SOFTWARE.
 #
-ws.consumer.target.name=localhost
-ws.consumer.target.host=127.0.0.1
-ws.consumer.target.port=5226
+z.chess.consumer.qtt.name=localhost
+z.chess.consumer.qtt.host=127.0.0.1
+z.chess.consumer.qtt.port=1883
+z.chess.consumer.ws.name=localhost
+z.chess.consumer.ws.host=127.0.0.1
+z.chess.consumer.ws.port=5226
