--- a/Z-Rook/src/main/resources/application.properties
+++ b/Z-Rook/src/main/resources/application.properties
@@ -21,9 +21,6 @@
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 # SOFTWARE.
 #
-z.chess.consumer.qtt.name=local-net
-z.chess.consumer.qtt.host=192.168.100.191
-z.chess.consumer.qtt.port=1883
-z.chess.consumer.ws.name=local-net
-z.chess.consumer.ws.host=192.168.100.191
-z.chess.consumer.ws.port=5226
+server.port=8090
+spring.jackson.property-naming-strategy=SNAKE_CASE
+spring.output.ansi.enabled=ALWAYS
