--- a/Z-Pawn/pom.xml
+++ b/Z-Pawn/pom.xml
@@ -40,15 +40,24 @@
             <artifactId>spring.z-knight</artifactId>
             <version>${project.version}</version>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>com.tgx.service</groupId>-->
-<!--            <artifactId>endpoint.z-rook</artifactId>-->
-<!--            <version>${project.version}</version>-->
-<!--        </dependency>-->
         <dependency>
             <groupId>com.tgx.service</groupId>
             <artifactId>biz.z-player</artifactId>
             <version>${project.version}</version>
         </dependency>
     </dependencies>
+    <build>
+        <plugins>
+            <!-- Spring Boot Maven 插件 -->
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>${spring-boot.version}</version>
+                <configuration>
+                    <layout>JAR</layout>
+                    <mainClass>com.tgx.chess.pawn.ApplicationPawn</mainClass>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
