DeviceConsumer + ConnectedOperator update & fix bugs

--- a/Z-Knight/src/main/resources/cluster.properties
+++ b/Z-Knight/src/main/resources/cluster.properties
@@ -26,6 +26,6 @@ z.chess.uid.cluster_id=1
 z.chess.uid.node_id=1
 z.chess.uid.type=2
 z.chess.bind=0.0.0.0:5228
-z.chess.peers[0]=192.168.10.10:5228
+#z.chess.peers[0]=192.168.10.10:5228
 #z.chess.gates[] ;key for routers between device's clusters
 #z.chess.gates[0]=172.10.10.23:5300
