--- a/Z-Rook/src/main/resources/consumer.properties
+++ b/Z-Rook/src/main/resources/consumer.properties
@@ -27,3 +27,4 @@ z.chess.consumer.qtt.port=1883
 z.chess.consumer.ws.name=local-net
 z.chess.consumer.ws.host=192.168.100.191
 z.chess.consumer.ws.port=5226
+z.chess.consumer.io_count=3
