--- a/Z-Knight/src/main/resources/cluster.properties
+++ b/Z-Knight/src/main/resources/cluster.properties
@@ -21,6 +21,7 @@
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 # SOFTWARE.
 #
+z.chess.elect_in_second=5S
 z.chess.uid.idc_id=1
 z.chess.uid.cluster_id=1
 z.chess.uid.node_id=1
