为schedule 增加 lock 机制保障线程安全

--- a/Z-Knight/src/main/resources/cluster.properties
+++ b/Z-Knight/src/main/resources/cluster.properties
@@ -22,6 +22,7 @@
 # SOFTWARE.
 #
 z.chess.elect_in_second=5S
+z.chess.heart_beat_in_second=15S
 z.chess.snapshot_in_second=60S
 z.chess.snapshot_min_size=50MB
 z.chess.uid.idc_id=1
