大幅升级RAFT 算法实现。

--- a/Z-Pawn/src/main/resources/application.properties
+++ b/Z-Pawn/src/main/resources/application.properties
@@ -24,3 +24,7 @@
 server.port=8090
 spring.jackson.property-naming-strategy=SNAKE_CASE
 spring.output.ansi.enabled=ALWAYS
+z.chess.uid.node_id=3
+z.chess.peers[0]=192.168.10.12:5228
+#z.chess.peers[1]=192.168.10.13:5228
+#z.chess.peers[2]=192.168.10.14:5228
