--- a/Z-Pawn/src/main/resources/application.properties
+++ b/Z-Pawn/src/main/resources/application.properties
@@ -24,5 +24,5 @@
 server.port=8090
 spring.jackson.property-naming-strategy=SNAKE_CASE
 spring.output.ansi.enabled=ALWAYS
-z.chess.cluster.peers[0]=192.168.100.200:5228
-z.chess.cluster.peers[1]=192.168.100.100:5228
+#z.chess.cluster.peers[0]=192.168.100.200:5228
+#z.chess.cluster.peers[1]=192.168.100.100:5228
