--- a/Z-Knight/src/main/resources/cluster.properties
+++ b/Z-Knight/src/main/resources/cluster.properties
@@ -21,8 +21,9 @@
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 # SOFTWARE.
 #
-z.chess.cluster.elect_in_second=5S
-z.chess.cluster.heartbeat_in_second=15S
+z.chess.cluster.elect_in_second=3S
+#heartbeat_in_second = 3 * elect_in_second
+z.chess.cluster.heartbeat_in_second=9S
 z.chess.cluster.snapshot_in_second=60S
 z.chess.cluster.snapshot_min_size=50MB
 z.chess.cluster.bind=0.0.0.0:5228
