--- a/Z-Consensus-Start/pom.xml
+++ b/Z-Consensus-Start/pom.xml
@@ -22,7 +22,6 @@
   ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
   ~ SOFTWARE.
   -->
-
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
@@ -32,40 +31,13 @@
         <version>1.0.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>start.z-start</artifactId>
-    <name>Z-Start</name>
+    <artifactId>consensus.z-start</artifactId>
+    <name>Z-Consensus-Start</name>
     <dependencies>
         <dependency>
             <groupId>com.tgx.service</groupId>
-            <artifactId>endpoint.z-pawn</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.tgx.service</groupId>
-            <artifactId>biz.z-player</artifactId>
+            <artifactId>spring.z-knight</artifactId>
             <version>${project.version}</version>
         </dependency>
     </dependencies>
-    <build>
-        <plugins>
-            <!-- Spring Boot Maven 插件 -->
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>${spring-boot.version}</version>
-                <configuration>
-                    <layout>JAR</layout>
-                    <mainClass>com.tgx.chess.pawn.start.ApplicationPawn</mainClass>
-                </configuration>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>repackage</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
-        <directory>${user.home}/Z-Chess/${project.name}/target</directory>
-    </build>
 </project>
