--- a/Z-Endpoint-Start/pom.xml
+++ b/Z-Endpoint-Start/pom.xml
@@ -26,19 +26,41 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
     <parent>
         <artifactId>framework.z-chess</artifactId>
         <groupId>com.tgx.service</groupId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
-    <artifactId>io.z-queen</artifactId>
-    <name>Z-Queen</name>
+    <modelVersion>4.0.0</modelVersion>
+    <artifactId>start.z-start</artifactId>
+    <name>Z-Start</name>
     <dependencies>
         <dependency>
             <groupId>com.tgx.service</groupId>
-            <artifactId>core.z-king</artifactId>
+            <artifactId>biz.z-player</artifactId>
             <version>${project.version}</version>
         </dependency>
     </dependencies>
+    <build>
+        <plugins>
+            <!-- Spring Boot Maven 插件 -->
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>${spring-boot.version}</version>
+                <configuration>
+                    <layout>JAR</layout>
+                    <mainClass>com.tgx.chess.pawn.start.ApplicationPawn</mainClass>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+        <directory>${user.home}/Z-Chess/${project.name}/target</directory>
+    </build>
 </project>
