--- a/Z-King/pom.xml
+++ b/Z-King/pom.xml
@@ -28,7 +28,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <artifactId>framework.z-com.tgx.chess</artifactId>
+        <artifactId>framework.z-chess</artifactId>
         <groupId>com.tgx.service</groupId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
