bug fix & idea rename 各种出问题，好烦

--- a/Z-Endpoint-Start/src/main/resources/application.properties
+++ b/Z-Endpoint-Start/src/main/resources/application.properties
@@ -24,8 +24,8 @@
 server.port=8090
 spring.jackson.property-naming-strategy=SNAKE_CASE
 spring.output.ansi.enabled=ALWAYS
-z.com.tgx.chess.cluster.peers[0]=192.168.56.100:5228
-z.com.tgx.chess.cluster.peers[1]=192.168.56.1:5228
-z.com.tgx.chess.cluster.peer_test=192.168.56.100:22
-z.com.tgx.chess.cluster.cluster_model=false
-#spring.datasource.url=jdbc:postgresql://192.168.56.100:5432/tgx.z-com.tgx.chess
+z.com.tgx.chess.raft.peers[0]=192.168.56.100:5228
+z.com.tgx.chess.raft.peers[1]=192.168.56.1:5228
+z.com.tgx.chess.raft.peer_test=192.168.56.100:22
+#z.com.tgx.chess.raft.cluster_model=false
+spring.datasource.url=jdbc:postgresql://192.168.56.100:5432/tgx.z-chess
