--- a/Z-Consensus-Start/src/main/resources/application.properties
+++ b/Z-Consensus-Start/src/main/resources/application.properties
@@ -28,4 +28,4 @@ z.com.tgx.chess.raft.peers[0]=192.168.56.100:5228
 z.com.tgx.chess.raft.peers[1]=192.168.56.1:5228
 z.com.tgx.chess.raft.peer_test=192.168.56.100:22
 z.com.tgx.chess.raft.cluster_model=true
-#spring.datasource.url=jdbc:postgresql://192.168.56.100:5432/tgx.z-com.tgx.chess
+#spring.datasource.url=jdbc:postgresql://192.168.56.100:5432/tgx.z-chess
