--- a/Z-Pawn/src/main/resources/io.provider.properties
+++ b/Z-Pawn/src/main/resources/io.provider.properties
@@ -21,8 +21,10 @@
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 # SOFTWARE.
 #
-z.com.tgx.chess.io.size_powers.consumer.0=3
-z.com.tgx.chess.io.size_powers.internal.1=10
+z.com.tgx.chess.io.size_powers.consumer.0=12
+z.com.tgx.chess.io.size_powers.internal.1=7
+z.com.tgx.chess.io.size_powers.provider.2=9
+z.com.tgx.chess.io.size_powers.cluster.3=7
 z.com.tgx.chess.io.consumer.keep_alive=false
 z.com.tgx.chess.io.consumer.connect_timeout_in_second=5S
 z.com.tgx.chess.io.consumer.write_timeout_in_second=15S
@@ -41,3 +43,21 @@ z.com.tgx.chess.io.internal.send_buffer_size=128KB
 z.com.tgx.chess.io.internal.recv_buffer_size=128KB
 z.com.tgx.chess.io.internal.send_queue_max=64
 z.com.tgx.chess.io.internal.tcp_no_delay=true
+z.com.tgx.chess.io.provider.keep_alive=true
+z.com.tgx.chess.io.provider.connect_timeout_in_second=1S
+z.com.tgx.chess.io.provider.write_timeout_in_second=5S
+z.com.tgx.chess.io.provider.read_timeout_in_minute=1M
+z.com.tgx.chess.io.provider.so_linger_in_second=30S
+z.com.tgx.chess.io.provider.send_buffer_size=128KB
+z.com.tgx.chess.io.provider.recv_buffer_size=128KB
+z.com.tgx.chess.io.provider.send_queue_max=64
+z.com.tgx.chess.io.provider.tcp_no_delay=true
+z.com.tgx.chess.io.cluster.keep_alive=true
+z.com.tgx.chess.io.cluster.connect_timeout_in_second=1S
+z.com.tgx.chess.io.cluster.write_timeout_in_second=5S
+z.com.tgx.chess.io.cluster.read_timeout_in_minute=1M
+z.com.tgx.chess.io.cluster.so_linger_in_second=30S
+z.com.tgx.chess.io.cluster.send_buffer_size=128KB
+z.com.tgx.chess.io.cluster.recv_buffer_size=128KB
+z.com.tgx.chess.io.cluster.send_queue_max=64
+z.com.tgx.chess.io.cluster.tcp_no_delay=true
